package services

import (
	// "github.com/FlowingSPDG/get5-web-go/server/src/api"
	// "github.com/FlowingSPDG/get5-web-go/server/src/db"
	pb "github.com/FlowingSPDG/get5-web-go/server/src/grpc/proto"
	// "github.com/FlowingSPDG/get5-web-go/server/src/util"
	"context"
	// "google.golang.org/grpc"
	// "log"
)

func (s Server) RegisterMapStats(ctx context.Context, req *pb.RegisterMapStatsRequest) (*pb.RegisterMapStatsReply, error) {
	return nil, nil // TODO
}

func (s Server) GetMapStats(ctx context.Context, req *pb.GetMapStatsRequest) (*pb.GetMapStatsReply, error) {
	return nil, nil // TODO
}

func (s Server) EditMapStats(ctx context.Context, req *pb.EditMapStatsRequest) (*pb.EditMapStatsReply, error) {
	return nil, nil // TODO
}

func (s Server) DeleteMapStats(ctx context.Context, req *pb.DeleteMapStatsRequest) (*pb.DeleteMapStatsReply, error) {
	return nil, nil // TODO
}
