package services

import (
	// "github.com/FlowingSPDG/get5-web-go/server/src/api"
	// "github.com/FlowingSPDG/get5-web-go/server/src/db"
	pb "github.com/FlowingSPDG/get5-web-go/server/src/grpc/proto"
	// "github.com/FlowingSPDG/get5-web-go/server/src/util"
	"context"
	// "google.golang.org/grpc"
	// "log"
)

func (s Server) RegisterPlayerStats(ctx context.Context, req *pb.RegisterPlayerStatsRequest) (*pb.RegisterPlayerStatsReply, error) {
	return nil, nil // TODO
}

func (s Server) GetPlayerStats(ctx context.Context, req *pb.GetPlayerStatsRequest) (*pb.GetPlayerStatsReply, error) {
	return nil, nil // TODO
}

func (s Server) EditPlayerStats(ctx context.Context, req *pb.EditPlayerStatsRequest) (*pb.EditPlayerStatsReply, error) {
	return nil, nil // TODO
}

func (s Server) DeletePlayerStats(ctx context.Context, req *pb.DeletePlayerStatsRequest) (*pb.DeletePlayerStatsReply, error) {
	return nil, nil // TODO
}
