package services

import (
	// "github.com/FlowingSPDG/get5-web-go/server/src/api"
	// "github.com/FlowingSPDG/get5-web-go/server/src/db"
	pb "github.com/FlowingSPDG/get5-web-go/server/src/grpc/proto"
	// "github.com/FlowingSPDG/get5-web-go/server/src/util"
	"context"
	// "google.golang.org/grpc"
	// "log"
)

func (s Server) RegisterTeam(ctx context.Context, req *pb.RegisterTeamRequest) (*pb.RegisterTeamReply, error) {
	return nil, nil // TODO
}

func (s Server) GetTeam(ctx context.Context, req *pb.GetTeamRequest) (*pb.GetTeamReply, error) {
	return nil, nil // TODO
}

func (s Server) EditTeam(ctx context.Context, req *pb.EditTeamRequest) (*pb.EditTeamReply, error) {
	return nil, nil // TODO
}

func (s Server) DeleteTeam(ctx context.Context, req *pb.DeleteTeamRequest) (*pb.DeleteTeamReply, error) {
	return nil, nil // TODO
}
